Update HTML content for portfolio page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gambitami | Portfolio</title>
+    <title>Gambitami | Portafolio de Datos</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
@@ -11,25 +11,30 @@
     <nav class="p-6 flex justify-between items-center max-w-6xl mx-auto">
         <h1 class="text-2xl font-bold text-blue-400">Gambitami</h1>
         <div class="space-x-4">
-            <a href="https://github.com/Gambitami" class="hover:text-blue-400">GitHub</a>
+            <a href="https://github.com/Gambitami" target="_blank" class="hover:text-blue-400 font-medium">GitHub</a>
         </div>
     </nav>
 
     <header class="py-20 text-center">
-        <h2 class="text-5xl font-extrabold mb-4">Mi Portafolio Digital</h2>
-        <p class="text-gray-400 text-xl">Bienvenido a mi espacio donde comparto mis proyectos y aprendizaje.</p>
+        <h2 class="text-5xl font-extrabold mb-4 tracking-tight">Portafolio de <span class="text-blue-500">Análisis de Datos</span></h2>
+        <p class="text-gray-400 text-xl max-w-2xl mx-auto">
+            Proyectos de Python, SQL y visualización. Enfocado en transformar datos en insights accionables.
+        </p>
     </header>
 
     <main class="max-w-6xl mx-auto px-6 pb-20">
         <h3 class="text-3xl font-semibold mb-8 border-b-2 border-blue-500 inline-block">Proyectos Seleccionados</h3>
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-6">
-            <div class="bg-gray-800 p-6 rounded-xl border border-gray-700 hover:border-blue-500 transition shadow-lg">
+            
+            <div class="bg-gray-800 p-6 rounded-xl border border-gray-700 hover:border-blue-500 transition-all duration-300 shadow-lg">
                 <h4 class="text-2xl font-bold mb-2 text-blue-300">Proyecto: TT</h4>
-                <p class="text-gray-400 mb-4">Este es un repositorio enfocado en [Descripción breve del proyecto TT].</p>
-                <div class="flex space-x-4">
-                    <a href="https://github.com/Gambitami/TT" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded text-sm font-bold">Ver Código</a>
-                    <a href="#" class="text-gray-400 hover:text-white py-2 text-sm italic">Demo próximamente</a>
+                <p class="text-gray-400 mb-6">
+                    Selección de proyectos de Análisis de Datos utilizando <strong>Python y SQL</strong> para la extracción y limpieza de información.
+                </p>
+                <div class="flex flex-wrap gap-4">
+                    <a href="https://github.com/Gambitami/TT" target="_blank" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded text-sm font-bold transition">Ver Código</a>
+                    <a href="https://gambitami.github.io/TT/" target="_blank" class="bg-gray-700 hover:bg-gray-600 px-4 py-2 rounded text-sm font-bold transition">Ver Proyecto en Vivo</a>
                 </div>
             </div>
 
@@ -37,7 +42,7 @@
     </main>
 
     <footer class="text-center py-10 border-t border-gray-800">
-        <p class="text-gray-500">© 2024 Gambitami - Construido con GitHub Pages</p>
+        <p class="text-gray-500 text-sm">© 2024 Gambitami - Construido con GitHub Pages</p>
     </footer>
 
 </body>
