--- a/index.html
+++ b/index.html
@@ -26,32 +26,27 @@
     <section class="max-w-6xl mx-auto px-6 py-12">
         <h3 class="text-2xl font-semibold mb-6 text-gray-300">Habilidades Técnicas</h3>
         <div class="flex flex-wrap gap-4">
-            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg">
+            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg hover:border-blue-500 transition">
                 <i class="fab fa-python text-yellow-400 mr-2"></i>
                 <span>Python (Pandas, Numpy)</span>
             </div>
-            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg">
+            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg hover:border-blue-500 transition">
                 <i class="fas fa-database text-blue-400 mr-2"></i>
                 <span>SQL (PostgreSQL, MySQL)</span>
             </div>
-            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg">
+            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg hover:border-blue-500 transition">
                 <i class="fas fa-chart-bar text-green-400 mr-2"></i>
                 <span>Visualización (Matplotlib, Seaborn)</span>
             </div>
-            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg">
-                <i class="fas fa-terminal text-purple-400 mr-2"></i>
-                <span>Git & GitHub</span>
-            </div>
-            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg">
+            <div class="flex items-center bg-gray-800 border border-gray-700 px-4 py-2 rounded-lg hover:border-blue-500 transition">
                 <i class="fas fa-file-excel text-green-600 mr-2"></i>
                 <span>Excel Avanzado</span>
             </div>
         </div>
     </section>
 
-    <main class="max-w-6xl mx-auto px-6 pb-20">
+    <main class="max-w-6xl mx-auto px-6 py-12">
         <h3 class="text-2xl font-semibold mb-8 text-gray-300">Proyectos Seleccionados</h3>
-        
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             
             <div class="bg-gray-800 p-6 rounded-xl border border-gray-700 hover:border-blue-500 transition-all duration-300 shadow-xl group">
@@ -73,12 +68,24 @@
                 <p class="text-gray-600 font-medium">Próximo proyecto en desarrollo...</p>
                 <i class="fas fa-plus-circle text-gray-800 text-3xl mt-2"></i>
             </div>
-
         </div>
     </main>
 
-    <footer class="text-center py-10 border-t border-gray-800 bg-gray-900">
-        <p class="text-gray-500 text-sm">© 2026 Gambitami - Analista de Datos</p>
+    <section class="max-w-6xl mx-auto px-6 py-16 text-center border-t border-gray-800">
+        <h3 class="text-3xl font-bold mb-8">¿Hablamos?</h3>
+        <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+            <a href="mailto:amilcp@outlook.com" class="flex items-center text-xl text-gray-300 hover:text-blue-400 transition">
+                <i class="fas fa-envelope mr-3 text-blue-500"></i> amilcp@outlook.com
+            </a>
+            <a href="https://www.linkedin.com/in/amilcar-alejandro-carrillo-ponce" target="_blank" class="flex items-center text-xl text-gray-300 hover:text-blue-400 transition">
+                <i class="fab fa-linkedin mr-3 text-blue-500"></i> LinkedIn
+            </a>
+        </div>
+    </section>
+
+    <footer class="text-center py-10 border-t border-gray-800 text-gray-500 text-sm">
+        <p>© 2026 Amilcar Alejandro Carrillo Ponce</p>
+        <p class="mt-2 text-xs">Construido con Tailwind CSS & GitHub Pages</p>
     </footer>
 
 </body>
