Enhance index.html with new content and styles
Updated header and added a new section for BI & Control Financiero.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="py-20 text-center border-b border-gray-800 bg-gradient-to-b from-gray-900 to-gray-800">
         <h2 class="text-4xl md:text-6xl font-extrabold mb-4 tracking-tight">
-            Amílcar Alejandro <span class="text-blue-500 text-nowrap text-3xl">Carrillo Ponce</span>
+            Amílcar Alejandro <span class="text-blue-500 text-nowrap text-3xl md:text-6xl">Carrillo Ponce</span>
         </h2>
         <p class="text-blue-400 text-2xl font-semibold mb-6 uppercase tracking-widest">
             Licenciado en Ciencia de Datos
@@ -73,10 +73,21 @@
                 </div>
             </div>
 
-            <div class="bg-gray-900 p-6 rounded-xl border border-dashed border-gray-700 flex flex-col justify-center items-center text-center opacity-60">
-                <p class="text-gray-500 font-medium italic">Siguiente análisis en progreso...</p>
-                <i class="fas fa-plus-circle text-gray-800 text-3xl mt-2"></i>
+            <div class="bg-gray-800 p-6 rounded-xl border border-gray-700 hover:border-green-500 transition-all duration-300 shadow-xl group">
+                <div class="flex justify-between items-start mb-4">
+                    <h4 class="text-2xl font-bold text-green-400 group-hover:text-green-300 transition uppercase tracking-tighter text-nowrap">BI & Control Financiero</h4>
+                    <span class="bg-green-900 text-green-300 text-[10px] px-2 py-1 rounded font-bold uppercase tracking-widest">Excel / BI</span>
+                </div>
+                <p class="text-gray-400 mb-6 leading-relaxed">
+                    Sistema integral para empresa en EE.UU. Control de <strong>rentabilidad, nómina y retención de clientes (Churn)</strong> con reportes automáticos por periodos.
+                </p>
+                <div class="flex flex-wrap gap-4 mt-auto">
+                    <a href="https://github.com/Gambitami/BI-Financial-Control-Excel" target="_blank" class="bg-green-600 hover:bg-green-700 px-4 py-2 rounded text-sm font-bold transition flex items-center text-white">
+                        <i class="fas fa-chart-line mr-2"></i> Ver Caso de Estudio
+                    </a>
+                </div>
             </div>
+
         </div>
     </main>
 
